--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -63,7 +63,7 @@ For over two decades, hybrid open access journal publishing, which makes
 some articles openly available while others remain behind a paywall, has
 been discussed as a model for transitioning the subscription system to
 full open access (Prosser, 2003). The idea was that when journals
-publish more and more open access articles, they could reduce revenues
+increasingly publish open access articles, they could reduce revenues
 from subscriptions, while libraries and funders could change their
 funding models and shift expenditures from subscription to open access.
 However, initial approaches, mainly based on publication fees, also
@@ -72,43 +72,41 @@ substantially to an large open access uptake. In 2009, Springer reported
 open access to 1\% of articles in hybrid journals (Dallmeier-Tiessen et
 al., 2010). Other publishers also recorded a low uptake. In 2011, only
 1-2\% of articles in over 4,300 hybrid journals from large publishers
-were open access (Björk, 2012), growing to around 4\% between 2011 and
-2013 (Laakso \& Björk, 2016).
+were open access (B.-C. Björk, 2012), growing to around 4\% between 2011
+and 2013 (Laakso \& Björk, 2016).
 
 With the introduction of central funding mechanisms for hybrid open
-access publication fees in a few countries since 2012, notably in the
-UK, an increase in open access could be observed (Björk, 2017; Jubb et
-al., 2017; Robinson-Garcia et al., 2020). However, this shift in funding
-policy towards hybrid open access also added to the overall cost of
-publishing, which includes subscriptions spending and the administrative
-efforts required to handle payments (Pinfield et al., 2016). Moreover,
-established large commercial publishers, which already dominated the
-publishing market (Larivière et al., 2015), disproportionately benefited
-from hybrid open access funding in comparison to full open access
-publishers (Butler et al., 2023; Jahn \& Tullney, 2016; Shu \&
-Larivière, 2023).
+access publication fees in some European countries since 2012 an
+increase in open access could be observed (B.-C. Björk, 2017; Huang et
+al., 2020; Jubb et al., 2017; Piwowar et al., 2018). For example,
+studying university output, Robinson-Garcia et al. (2020) estimated a
+median uptake of 7.1\% in the period 2014-2017. In particular, British
+(17\%), Austrian (15\%) and Dutch (13\%) universities contributed to
+this trend. However, this shift in funding policy towards hybrid open
+access also added to the overall cost of publishing, which includes
+subscription spending and the administrative efforts required to handle
+payments (Pinfield et al., 2016). Moreover, established large commercial
+publishers, which already dominated the publishing market (Larivière et
+al., 2015), disproportionately benefited from hybrid open access funding
+in comparison to full open access publishers (Butler et al., 2023; Jahn
+\& Tullney, 2016; Shu \& Larivière, 2023).
 
 As a consequence, libraries and their consortia began to develop
 licensing strategies aimed at avoiding such `double dipping' scenarios,
 in which well-established commercial publishers gain twice from reading
 and publication fees, as well as to increase publisher-provided
-immediate open access (BJÖRK \& SOLOMON, 2014; Schimmer et al., 2015).
-These considerations resulted into transformative agreements, which
-cover a broad range of successfully negotiated contracts between library
-consortia and publishers from mid-2010s onwards where institutional
-spending for subscriptions are re-purposed for open access publishing
-(Borrego et al., 2020). These transformative agreements seek to control
-costs while allowing a transitional phase for publishing more open
-access articles (Hinchliffe, 2019). At the same time, they aim at a
-higher degree of transparency than previous subscription-only Big Deals,
-which bundled access to large journal portfolios of commercial
-publishers (Bergstrom et al., 2014). However, the focus of
-transformative agreements remains primarily on these publishers with
-large hybrid journals and subscription-only portfolios (Borrego et al.,
-2020). For example, the nationwide DEAL consortium in Germany, which
-includes universities and academic institutions, collectively cancelled
-their subscriptions with Elsevier from 2017 onwards to negotiate a
-transformative agreement (Fraser et al., 2023).
+immediate open access (B. Björk \& Solomon, 2014; Schimmer et al.,
+2015). These considerations resulted into transformative agreements,
+which cover a broad range of successfully negotiated contracts between
+library consortia and publishers from mid-2010s onwards where
+institutional spending for subscriptions are re-purposed for open access
+publishing (Borrego et al., 2020; Hinchliffe, 2019). Transformative
+agreements seek to control costs while allowing a transitional phase for
+publishing more open access articles. Although transformative agreements
+mainly focus on large hybrid journals and subscription-only portfolios
+of commercial publishers, they aim at a higher degree of transparency
+than previous big deals, where contracts including payments were
+confidential (Bergstrom et al., 2014).
 
 The introduction of transformative agreements aligns with funding policy
 changes, such as the decision made by the cOAlition S, a consortium of
@@ -119,35 +117,82 @@ access through transformative agreements ``during a transition period
 that should be as short as possible'' (Schiltz, 2018). Specifically,
 cOAlition S funders agreed to support hybrid open access solely through
 transformative agreements from 1 January 2021, until the end of 2024.
-The German Research Foundation (DFG) has also extended its financial
-support for hybrid open access through transformative agreements,
-despite not being part of cOAlition S. Previously, the DFG only provided
-funding for full open access journals (Jahn \& Tullney, 2016).
+Notably, the German Research Foundation (DFG), despite not being part of
+cOAlition S, has also extended its financial support for hybrid open
+access through transformative agreements (Mittermaier, 2021).
+Previously, the DFG only provided funding for full open access journals
+(Jahn \& Tullney, 2016).
 
-Advocates of these agreements argue that they not only overcome the
-issue standardiazation of double-dipping but also help to shift library
-spending from subscriptions to publications, streamline expenditures,
-and offer more value than big deals, which focus on large publishers. A
-few agreements can impact an institution's open access share, resulting
-in a significant proportion of open access content. increase
-transparency
+By the end of 2023, many transformative agreements were implemented, but
+the outcomes are mixed. The ESAC Transformative Agreement
+Registry\footnote{\url{https://esac-initiative.org/about/transformative-agreements/agreement-registry/}},
+the largest source of disclosure, recorded more than 800 transformative
+agreements, resulting in up to 900.000 open access articles published in
+both full open access and hybrid journals according to the accompanying
+ESAC Market Watch\footnote{\url{https://esac-initiative.org/market-watch/}}.
+National consortia reported increased open access volume, streamlined
+payment and monitoring procedures, as well as extensive utilization of
+open access options by the researchers they serve (Hinchliffe, 2019;
+Marques \& Stone, 2020; Parmhed \& Säll, 2023). The ongoing
+standardisation of transformative agreements contributed to improved
+transparency in terms of contracts and publisher-provided article
+metadata (Marques et al., 2019). However, with the growing trend toward
+transformative agreements, continued reliance on big deals is perceived
+as problematic, perpetuating the business relationships that led to the
+serial crisis. Whether transformative agreements lead to reduced pricing
+remains uncertain (\textbf{Borrego\_2023?}). A substantial transition of
+hybrid journals towards full OA could not be observed (Matthias et al.,
+2019; Momeni et al., 2021), and the focus on large commercial publishers
+has led to concerns regarding inequality, because transformative
+agreements continue to target institutions from high-income countries
+(Butler et al., 2023; Klebel \& Ross-Hellauer, 2023). Besides, an
+editorial-board resignation raised concerns that publishers' desire to
+maximize journal publication volume ``without regard to quality'' is a
+consequence of transformative agreements (Rasmussen, 2023).
 
-However, opponents of transformative agreements perceive continued
-reliance on big deals as problematic. They argue that the focus on large
-publishers perpetuates the business relationships that led to the serial
-crisis and lacks evidence that this leads to a reduction of In addition,
-concerns over inequality abound. trnasparency differ and now nsns
+The controversies surrounding hybrid open access and transformative
+agreements have led to varying practical conclusions. For instance, the
+Swedish BIBSAM consortium recommended to only support agreements for
+publishing in full open access journals. Likewise, most cOAlition S
+funders will discontinue financial support for transformative agreements
+from 2024 onwards (Liverpool, 2023). The consortium also removed most
+hybrid journals from its Transformative Journal program in 2023 due to
+their failure to meet self-defined open access growth targets. In
+contrast, the German DEAL consortium signed a cost-effective five-year
+transformative agreement with Elsevier starting in 2024, while also
+renewing its contracts with Springer Nature and Wiley until the end of
+2028.
 
-could not benn mass removal
+Against this background, the research objective of this study is to
+investigate the open access uptake of hybrid journals between 2018 and
+2022, and the extent to which open access in hybrid journals can be
+attributed to transformative agreements. Previous quantitative science
+studies were able to investigate transformative agreements relative to
+specific countries (Haucap et al., 2021; Huang et al., 2020; Pölönen et
+al., 2020; Taubert et al., 2023; Wenaas, 2022) and journal portfolios
+(Bakker et al., 2024; Fraser et al., 2023; Momeni et al., 2023; Pieper
+\& Broschinski, 2018; \textbf{Jahn\_2022?}). Others have focused soley
+on APC list prices (Shu \& Larivière, 2023; Zhang et al., 2022), not
+accounting for the peculiarities of transformative agreements.
+Similarly, bibliometric databases, even though many allow the retrieval
+of open access articles in hybrid journals, do not directly attribute
+them to specific transformative agreements.
 
-Effects can be seen, mixed consequences. some countries who have
-introduced this fundign effects netherlands, sweden. no in germany,
-elsevier deal to price reduction and first steps towards mroe privacy.
-however, main goals associated woth trnasofrtiomative, the transition of
-the journal landscape not achivned, publsiehrs were not able to meet
-growtht raget, sweden did not see the flipping and has
+The present study aims at a large-scale investigation using openly
+available data sources to answer the following research questions:
 
-This study contributes
+\begin{itemize}
+\tightlist
+\item
+  What are the number and proportion of open access articles in hybrid
+  journals published under transformative agreements between 2018-2022?
+\item
+  Who is publishing open access in hybrid journals enabled by
+  transformative agreements, and who is not?
+\end{itemize}
+
+The results of the study will be group by publishers, subjects and
+countries to account for the controversies.
 
 \hypertarget{methods-and-data}{%
 \section{Methods and data}\label{methods-and-data}}
@@ -250,7 +295,7 @@ deliver CC license information to this DOI registration agency (Geschuhn
 which re-uses open access evidence from Unpaywall, a widely used open
 access discovery service that also parses journal websites for open
 content licenses (Piwowar et al., 2018), highlighted ongoing challenges
-to identify hybrid open access (Butler et al., 2023; Jahn et al., 2021;
+to identify hybrid open access (Butler et al., 2023; Jahn et al., 2022;
 Martín-Martín et al., 2018; Zhang et al., 2022). Here, 742,369 articles
 with CC license were retrieved using Crossref, while 950,260 articles
 were tagged as ``hybrid'' according to the OpenAlex November 2023
@@ -681,6 +726,13 @@ where only a few or no agreements were in place.
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
+\leavevmode\vadjust pre{\hypertarget{ref-Bakker_2024}{}}%
+Bakker, C., Langham-Putrow, A., \& Riegelman, A. (2024). Impact of
+transformative agreements on publication patterns: An analysis based on
+agreements from the ESAC registry. \emph{International Journal of
+Librarianship}, \emph{8}(4), 67--96.
+\url{https://doi.org/10.23974/ijol.2024.vol8.4.341}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Bergstrom_2014}{}}%
 Bergstrom, T. C., Courant, P. N., McAfee, R. P., \& Williams, M. A.
 (2014). Evaluating big deal journal bundles. \emph{Proceedings of the
@@ -698,7 +750,7 @@ Björk, B.-C. (2017). Growth of hybrid open access, 2009--2016.
 \emph{PeerJ}, \emph{5}, e3878. \url{https://doi.org/10.7717/peerj.3878}
 
 \leavevmode\vadjust pre{\hypertarget{ref-BJ_RK_2014}{}}%
-BJÖRK, B., \& SOLOMON, D. (2014). How research funders can finance APCs
+Björk, B., \& Solomon, D. (2014). How research funders can finance APCs
 in full OA and hybrid journals. \emph{Learned Publishing}, \emph{27}(2),
 93--103. \url{https://doi.org/10.1087/20140203}
 
@@ -737,10 +789,22 @@ required to make {``offsetting''} work for the open access transition.
 \emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
 \url{https://doi.org/10.1629/uksg.391}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Haucap_2021}{}}%
+Haucap, J., Moshgbar, N., \& Schmal, W. B. (2021). The impact of the
+german {``DEAL''} on competition in the academic publishing market.
+\emph{Managerial and Decision Economics}, \emph{42}(8), 2027--2049.
+\url{https://doi.org/10.1002/mde.3493}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Hinchliffe_2019}{}}%
 Hinchliffe, L. J. (2019). \emph{Transformative agreements: A primer}.
 \url{https://web.archive.org/web/20210128170342/https://scholarlykitchen.sspnet.org/2019/04/23/transformative-agreements/};
 The Scholarly Kitchen.
+
+\leavevmode\vadjust pre{\hypertarget{ref-Huang_2020}{}}%
+Huang, C.-K. (Karl), Neylon, C., Hosking, R., Montgomery, L., Wilson, K.
+S., Ozaygen, A., \& Brookes-Kenworthy, C. (2020). Evaluating the impact
+of open access policies on research institutions. \emph{{eLife}},
+\emph{9}. \url{https://doi.org/10.7554/elife.57067}
 
 \leavevmode\vadjust pre{\hypertarget{ref-jahn2023}{}}%
 Jahn, N., Haupka, N., \& Hobert, A. (2023). \emph{Analysing and
@@ -748,7 +812,7 @@ reclassifying open access information in OpenAlex}. Blog post.
 \url{https://subugoe.github.io/scholcomm_analytics/posts/oalex_oa_status/}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Jahn_2021}{}}%
-Jahn, N., Matthias, L., \& Laakso, M. (2021). Toward transparency of
+Jahn, N., Matthias, L., \& Laakso, M. (2022). Toward transparency of
 hybrid open access through publisher-provided metadata: An article-level
 study of elsevier. \emph{Journal of the Association for Information
 Science and Technology}, \emph{73}(1), 104--118.
@@ -764,6 +828,11 @@ Jubb, M., Plume, A., Oeben, S., Brammer, L., Johnson, R., Bütün, C., \&
 Pinfield, S. (2017). \emph{Monitoring the transition to open access:
 December 2017}.
 \url{https://web.archive.org/web/20200212015524/https://www.universitiesuk.ac.uk/policy-and-analysis/reports/Documents/2017/monitoring-transition-open-access-2017.pdf}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Klebel_2023}{}}%
+Klebel, T., \& Ross-Hellauer, T. (2023). The APC-barrier and its effect
+on stratification in open access publishing. \emph{Quantitative Science
+Studies}, \emph{4}(1), 22--43. \url{https://doi.org/10.1162/qss_a_00245}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Laakso_2016}{}}%
 Laakso, M., \& Björk, B.-C. (2016). Hybrid open access--a longitudinal
@@ -782,6 +851,23 @@ academic publishers in the digital era. \emph{{PLOS} {ONE}},
 \emph{10}(6), e0127502.
 \url{https://doi.org/10.1371/journal.pone.0127502}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Liverpool_2023}{}}%
+Liverpool, L. (2023). Open-access reformers launch next bold publishing
+plan. \emph{Nature}, \emph{623}(7986), 238--240.
+\url{https://doi.org/10.1038/d41586-023-03342-6}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Marques_2020}{}}%
+Marques, M., \& Stone, G. (2020). Transitioning to open access: An
+evaluation of the {UK} springer compact agreement pilot 2016--2018.
+\emph{College {\&} Research Libraries}, \emph{81}(6), 913--927.
+\url{https://doi.org/10.5860/crl.81.6.913}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Marques_2019}{}}%
+Marques, M., Woutersen-Windhouwer, S., \& Tuuliniemi, A. (2019).
+Monitoring agreements with open access elements: Why article-level
+metadata are important. \emph{Insights the {UKSG} Journal}, \emph{32}.
+\url{https://doi.org/10.1629/uksg.489}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Mart_n_Mart_n_2018}{}}%
 Martín-Martín, A., Costas, R., Leeuwen, T. van, \& López-Cózar, E. D.
 (2018). Evidence of open access of scientific publications in google
@@ -793,6 +879,41 @@ Marwick, B., Boettiger, C., \& Mullen, L. (2018). Packaging data
 analytical work reproducibly using r (and friends). \emph{The American
 Statistician}, \emph{72}(1), 80--88.
 \url{https://doi.org/10.1080/00031305.2017.1375986}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Matthias_2019}{}}%
+Matthias, L., Jahn, N., \& Laakso, M. (2019). The two-way street of open
+access journal publishing: Flip it and reverse it. \emph{Publications},
+\emph{7}(2), 23. \url{https://doi.org/10.3390/publications7020023}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Mittermaier_2021}{}}%
+Mittermaier, B. (2021). {Rolle des Open Access Monitor Deutschland bei
+der Antragstellung im DFG-Förderprogramm
+Open-Access-Publikationskosten}. \emph{{O-Bib. Das Offene
+Bibliotheksjournal / Herausgeber VDB}}, \emph{8}.
+\url{https://doi.org/10.5282/O-BIB/5731}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Momeni_2023}{}}%
+Momeni, F., Dietze, S., Mayr, P., Biesenbender, K., \& Peters, I.
+(2023). Which factors are associated with open access publishing? A
+springer nature case study. \emph{Quantitative Science Studies},
+\emph{4}(2), 353--371. \url{https://doi.org/10.1162/qss_a_00253}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Momeni_2021}{}}%
+Momeni, F., Mayr, P., Fraser, N., \& Peters, I. (2021). What happens
+when a journal converts to open access? A bibliometric analysis.
+\emph{Scientometrics}, \emph{126}(12), 9811--9827.
+\url{https://doi.org/10.1007/s11192-021-03972-5}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Parmhed_2023}{}}%
+Parmhed, S., \& Säll, J. (2023). Transformative agreements and their
+practical impact: A librarian perspective. \emph{Insights the UKSG
+Journal}, \emph{36}. \url{https://doi.org/10.1629/uksg.612}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Pieper_2018}{}}%
+Pieper, D., \& Broschinski, C. (2018). {OpenAPC}: A contribution to a
+transparent and reproducible monitoring of fee-based open access
+publishing across institutions and nations. \emph{Insights the {UKSG}
+Journal}, \emph{31}. \url{https://doi.org/10.1629/uksg.439}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Pinfield_2016}{}}%
 Pinfield, S., Salter, J., \& Bath, P. A. (2016). The "total cost of
@@ -809,6 +930,13 @@ of {OA}: A large-scale analysis of the prevalence and impact of open
 access articles. \emph{{PeerJ}}, \emph{6}, e4375.
 \url{https://doi.org/10.7717/peerj.4375}
 
+\leavevmode\vadjust pre{\hypertarget{ref-P_l_nen_2020}{}}%
+Pölönen, J., Laakso, M., Guns, R., Kulczycki, E., \& Sivertsen, G.
+(2020). Open access at the national level: A comprehensive analysis of
+publications by finnish researchers. \emph{Quantitative Science
+Studies}, \emph{1}(4), 1396--1428.
+\url{https://doi.org/10.1162/qss_a_00084}
+
 \leavevmode\vadjust pre{\hypertarget{ref-priem2022openalex}{}}%
 Priem, J., Piwowar, H., \& Orr, R. (2022). \emph{OpenAlex: A fully-open
 index of scholarly works, authors, venues, institutions, and concepts}.
@@ -819,6 +947,11 @@ Prosser, D. C. (2003). From here to there: A proposed mechanism for
 transforming journals from closed to open access. \emph{Learned
 Publishing}, \emph{16}(3), 163--166.
 \url{https://doi.org/10.1087/095315103322110923}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Goodin_2023}{}}%
+Rasmussen, K. B. (2023). Interview with robert {``bob''} e. goodin.
+\emph{Tidskrift För Politisk Filosofi}.
+\url{https://www.politiskfilosofi.se/fulltext/2023-2/pdf/TPF_2023-2_interview_with_robert_bob_e_goodin.pdf}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Robinson_Garcia_2020}{}}%
 Robinson-Garcia, N., Costas, R., \& Leeuwen, T. N. van. (2020). Open
@@ -841,6 +974,19 @@ transformation to open access}}. Max Planck Digital Library.
 Shu, F., \& Larivière, V. (2023). The oligopoly of open access
 publishing. \emph{Scientometrics}, \emph{129}(1), 519--536.
 \url{https://doi.org/10.1007/s11192-023-04876-2}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Taubert_2023}{}}%
+Taubert, N., Hobert, A., Jahn, N., Bruns, A., \& Iravani, E. (2023).
+Understanding differences of the OA uptake within the german university
+landscape (2010--2020): Part 1---journal-based OA.
+\emph{Scientometrics}, \emph{128}(6), 3601--3625.
+\url{https://doi.org/10.1007/s11192-023-04716-3}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Wenaas_2022}{}}%
+Wenaas, L. (2022). Choices of immediate open access and the relationship
+to journal ranking and publish-and-read deals. \emph{Frontiers in
+Research Metrics and Analytics}, \emph{7}.
+\url{https://doi.org/10.3389/frma.2022.943932}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Zhang_2022}{}}%
 Zhang, L., Wei, Y., Huang, Y., \& Sivertsen, G. (2022). Should open
