--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -15,6 +15,15 @@
   year = {2023}
 }
 
+@article{Goodin_2023,
+  author = {Katharina Berndt Rasmussen},
+  title = {Interview with Robert ‘Bob’ E. Goodin},
+  journal = {Tidskrift för politisk filosofi},
+  issue = 2,
+  year = {2023},
+  url = {https://www.politiskfilosofi.se/fulltext/2023-2/pdf/TPF_2023-2_interview_with_robert_bob_e_goodin.pdf}
+  }
+  
 @article{Larivi_re_2016, 
  title={Contributorship and division of labor in knowledge production},
  volume={46},
@@ -26,15 +35,30 @@
  year={2016},
  month=jun, pages={417–435} }
 
-@article{Jahn_2021, title={Toward transparency of hybrid open access through publisher-provided metadata: An article-level study of Elsevier}, volume={73}, ISSN={2330-1643}, url={http://dx.doi.org/10.1002/asi.24549}, DOI={10.1002/asi.24549}, number={1}, journal={Journal of the Association for Information Science and Technology}, publisher={Wiley}, author={Jahn, Najko and Matthias, Lisa and Laakso, Mikael}, year={2021}, month=jul, pages={104--118} }
+@article{Jahn_2021, title={Toward transparency of hybrid open access through publisher-provided metadata: An article-level study of Elsevier}, volume={73}, ISSN={2330-1643}, url={http://dx.doi.org/10.1002/asi.24549}, DOI={10.1002/asi.24549}, number={1}, journal={Journal of the Association for Information Science and Technology}, publisher={Wiley}, author={Jahn, Najko and Matthias, Lisa and Laakso, Mikael}, year={2022}, month=jul, pages={104--118} }
 
+@article{Taubert_2023, title={Understanding differences of the OA uptake within the German university landscape (2010–2020): part 1—journal-based OA}, volume={128}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-023-04716-3}, DOI={10.1007/s11192-023-04716-3}, number={6}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Taubert, Niels and Hobert, Anne and Jahn, Najko and Bruns, Andre and Iravani, Elham}, year={2023}, month=may, pages={3601–3625} }
 
+@article{Haucap_2021, title={The impact of the German “DEAL” on competition in the academic publishing market}, volume={42}, ISSN={1099-1468}, url={http://dx.doi.org/10.1002/mde.3493}, DOI={10.1002/mde.3493}, number={8}, journal={Managerial and Decision Economics}, publisher={Wiley}, author={Haucap, Justus and Moshgbar, Nima and Schmal, W. Benedikt}, year={2021}, month=nov, pages={2027–2049} }
+
+@article{Huang_2020, title={Evaluating the impact of open access policies on research institutions}, volume={9}, ISSN={2050-084X}, url={http://dx.doi.org/10.7554/eLife.57067}, DOI={10.7554/elife.57067}, journal={eLife}, publisher={eLife Sciences Publications, Ltd}, author={Huang, Chun-Kai (Karl) and Neylon, Cameron and Hosking, Richard and Montgomery, Lucy and Wilson, Katie S and Ozaygen, Alkim and Brookes-Kenworthy, Chloe}, year={2020}, month=sep }
+
+@article{P_l_nen_2020, title={Open access at the national level: A comprehensive analysis of publications by Finnish researchers}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00084}, DOI={10.1162/qss_a_00084}, number={4}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Pölönen, Janne and Laakso, Mikael and Guns, Raf and Kulczycki, Emanuel and Sivertsen, Gunnar}, year={2020}, month=dec, pages={1396–1428} }
+
+@article{Wenaas_2022, title={Choices of immediate open access and the relationship to journal ranking and publish-and-read deals}, volume={7}, ISSN={2504-0537}, url={http://dx.doi.org/10.3389/frma.2022.943932}, DOI={10.3389/frma.2022.943932}, journal={Frontiers in Research Metrics and Analytics}, publisher={Frontiers Media SA}, author={Wenaas, Lars}, year={2022}, month=oct }
 @article{Marwick_2018, title={Packaging Data Analytical Work Reproducibly Using R (and Friends)}, volume={72}, url={http://dx.doi.org/10.1080/00031305.2017.1375986}, DOI={10.1080/00031305.2017.1375986}, number={1}, journal={The American Statistician}, publisher={Informa UK Limited}, author={Marwick, Ben and Boettiger, Carl and Mullen, Lincoln}, year={2018}, pages={80--88} }
 
  @article{Butler_2023, title={The oligopoly’s shift to open access: How the big five academic publishers profit from article processing charges}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00272}, DOI={10.1162/qss_a_00272}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Butler, Leigh-Ann and Matthias, Lisa and Simard, Marc-André and Mongeon, Philippe and Haustein, Stefanie}, year={2023}, month=dec, pages={1–22} }
 
 @article{Zhang_2022, title={Should open access lead to closed research? The trends towards paying to perform research}, volume={127}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-022-04407-5}, DOI={10.1007/s11192-022-04407-5}, number={12}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Zhang, Lin and Wei, Yahui and Huang, Ying and Sivertsen, Gunnar}, year={2022}, month=may, pages={7653–7679} }
 
+@article{Liverpool_2023, title={Open-access reformers launch next bold publishing plan}, volume={623}, ISSN={1476-4687}, url={http://dx.doi.org/10.1038/d41586-023-03342-6}, DOI={10.1038/d41586-023-03342-6}, number={7986}, journal={Nature}, publisher={Springer Science and Business Media LLC}, author={Liverpool, Layal}, year={2023}, month=oct, pages={238–240} }
+
+@article{Klebel_2023, title={The APC-barrier and its effect on stratification in open access publishing}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00245}, DOI={10.1162/qss_a_00245}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Klebel, Thomas and Ross-Hellauer, Tony}, year={2023}, pages={22–43} }
+
+@article{Parmhed_2023, title={Transformative agreements and their practical impact: a librarian perspective}, volume={36}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.612}, DOI={10.1629/uksg.612}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Parmhed, Sara and Säll, Johanna}, year={2023} }
+
+@article{Momeni_2023, title={Which factors are associated with Open Access publishing? A Springer Nature case study}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00253}, DOI={10.1162/qss_a_00253}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Momeni, Fakhri and Dietze, Stefan and Mayr, Philipp and Biesenbender, Kristin and Peters, Isabella}, year={2023}, pages={353–371} }
 
 @misc{priem2022openalex,
       title={OpenAlex: A fully-open index of scholarly works, authors, venues, institutions, and concepts}, 
@@ -79,7 +103,13 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
  year = {2021}}
  
  
- @article{BJ_RK_2014, title={How research funders can finance APCs in full OA and hybrid journals}, volume={27}, ISSN={1741-4857}, url={http://dx.doi.org/10.1087/20140203}, DOI={10.1087/20140203}, number={2}, journal={Learned Publishing}, publisher={Wiley}, author={BJÖRK, Bo‐Christer and SOLOMON, David}, year={2014}, month=apr, pages={93–103} }
+ @article{BJ_RK_2014, title={How research funders can finance APCs in full OA and hybrid journals}, volume={27}, ISSN={1741-4857}, url={http://dx.doi.org/10.1087/20140203}, DOI={10.1087/20140203}, number={2}, journal={Learned Publishing}, publisher={Wiley}, author={Björk, Bo‐Christer and Solomon, David}, year={2014}, month=apr, pages={93–103} }
+ 
+ 
+ @article{Bakker_2024, title={Impact of Transformative Agreements on Publication Patterns: An Analysis Based on Agreements from the ESAC Registry}, volume={8}, ISSN={2474-3542}, url={http://dx.doi.org/10.23974/ijol.2024.vol8.4.341}, DOI={10.23974/ijol.2024.vol8.4.341}, number={4}, journal={International Journal of Librarianship}, publisher={International Journal of Librarianship}, author={Bakker, Caitlin and Langham-Putrow, Allison and Riegelman, Amy}, year={2024}, month=jan, pages={67–96} }
+ 
+@article{Momeni_2021, title={What happens when a journal converts to open access? A bibliometric analysis}, volume={126}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-021-03972-5}, DOI={10.1007/s11192-021-03972-5}, number={12}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Momeni, Fakhri and Mayr, Philipp and Fraser, Nicholas and Peters, Isabella}, year={2021}, month=apr, pages={9811–9827} }
+
 %%%%
 @misc{OS_Monitor,
   title = {Open Science Monitor: Trends for open access to publications},
